# ai-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: README.md  best-practices.md  mcp-development.md  mcp-server-architecture.md  tools-usage.md  troubleshooting.md
learning/: README.md
learning/experiments/: README.md
learning/playground/: README.md
learning/tutorials/: README.md
learning/tutorials/client-integration/: README.md
learning/tutorials/first-server/: README.md
learning/tutorials/mcp-basics/: README.md
projects/: README.md
projects/examples/: README.md
projects/examples/basic/: README.md  config-example.json  simple-mcp-client.py
projects/mcp-servers/: README.md
projects/mcp-servers/filesystem-navigator/: .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
projects/mcp-servers/filesystem-navigator/examples/: README.md  TESTING.md  mcp-config.json  test-client.js  test-client.py  usage-examples.md
projects/mcp-servers/filesystem-navigator/src/: index.ts  server.ts
projects/mcp-servers/filesystem-navigator/tests/: server.test.ts
projects/mcp-servers/simple-calculator/: README.md  pyproject.toml  server.py  test-client.py
projects/mcp-servers/template/: README.md  pyproject.toml  server.py
projects/tools/: README.md
resources/: README.md
scripts/: README.md  setup.sh
